# aws-cdk-lightsail-openclaw

./: .env.example  .gitignore  AGENTS.md  README-ES.md  README.md  app.py  pyproject.toml
config/: dev.json  prod.json
lambda/bedrock_role_setup/: index.py
scripts/: bootstrap.ps1  deploy.ps1  destroy.ps1  diff.ps1  synth.ps1
scripts/linux-mac/: bootstrap  deploy  diff  synth
scripts/linux-mac/dev/: bootstrap  deploy  destroy  diff  synth
scripts/linux-mac/prod/: bootstrap  deploy  destroy  diff  synth
scripts/windows/: bootstrap.ps1  destroy.ps1  diff.ps1
scripts/windows/dev/: bootstrap.ps1  deploy.ps1  synth.ps1
scripts/windows/prod/: bootstrap.ps1  deploy.ps1  destroy.ps1  diff.ps1  synth.ps1
stacks/: lightsail_openclaw_stack.py
tests/: test_openclaw_config.py
